[gd_scene load_steps=8 format=3 uid="uid://ddradf205mbgq"]

[ext_resource type="Script" path="res://level_2/level_2.gd" id="1_5iwyr"]
[ext_resource type="PackedScene" uid="uid://buk51jax2gxuj" path="res://Level_3/dressup.tscn" id="2_o6gs2"]
[ext_resource type="PackedScene" uid="uid://cocot8x4dtxs" path="res://level_2/dragable_piece.tscn" id="2_ryf2p"]
[ext_resource type="PackedScene" uid="uid://dfxn8amk86irv" path="res://level_2/fillable_area.tscn" id="4_4466f"]

[sub_resource type="Animation" id="Animation_b1sdo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ju3sp"]
resource_name = "transition"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.56667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nx41a"]
_data = {
"RESET": SubResource("Animation_b1sdo"),
"transition": SubResource("Animation_ju3sp")
}

[node name="Level2" type="Node2D"]
modulate = Color(0, 0, 0, 1)
script = ExtResource("1_5iwyr")
next_scene = ExtResource("2_o6gs2")

[node name="DragablePiece" parent="." instance=ExtResource("2_ryf2p")]
position = Vector2(272, 176)

[node name="FillableArea" parent="." instance=ExtResource("4_4466f")]
position = Vector2(440, 230)
total_areas = 11

[node name="Time" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 296.0
offset_right = 336.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ResultLabel" type="Label" parent="."]
offset_left = 263.0
offset_top = 146.0
offset_right = 303.0
offset_bottom = 215.0
theme_override_font_sizes/font_size = 50

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nx41a")
}
autoplay = "transition"

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Â¡UNE LAS PIEZAS!"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
